2021-01-20  7.0.10-59  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.10-59 GIT revision 18...

2021-01-20  7.0.10-59  <quetzlzacatenango@image...>
  * strip EXIF marker from profile (reference
    https://github.com/ImageMagick/ImageMagick/issues/3140).

2021-01-16  7.0.10-58  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.10-58 GIT revision 18277:8876652f5:20210116

2021-01-11  7.0.10-58  <quetzlzacatenango@image...>
  * identify the convex hull and minimum bounding box attributes of an image
    with the -define identify:convex-hull=true define.
  * set the quality to 100 to produce lossless HEIC images (reference
    https://github.com/ImageMagick/ImageMagick/pull/3116).
  * properly identify SVG images (reference
    https://github.com/ImageMagick/ImageMagick/issues/3117).
  * duplicate operator: inverse range parameter working again (reference
    https://github.com/ImageMagick/ImageMagick/issues/3113).
  * Fix rounding error for CSS colors on i686 (reference
    https://tracker.debian.org/pkg/imagemagick).

2021-01-09  7.0.10-57  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.10-57 GIT revision 18221:2f611d533:20210109

2021-01-08  7.0.10-57  <quetzlzacatenango@image...>
  * update automake/autoconf configuration files.
  * additional checks to prevent integer overflow.

2021-01-05  7.0.10-56  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.10-56 GIT revision 18192:2fb74f026:20210105

2021-01-05  7.0.10-56  <quetzlzacatenango@image...>
  * Fix rounding error for CSS colors (reference
    https://github.com/ImageMagick/ImageMagick6/issues/129).

2021-01-03  7.0.10-55  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.10-55 GIT revision 18181:636ebf7ba:20210103

2021-01-04  7.0.10-55  <quetzlzacatenango@image...>
  * revert changes to the default max width/height of image.

2021-01-02  7.0.10-54  <quetzlzacatenango@image...>