@@ -4,6 +4,8 @@
 2021-01-20  7.0.10-59  <quetzlzacatenango@image...>
   * strip EXIF marker from profile (reference
     https://github.com/ImageMagick/ImageMagick/issues/3140).
+  * add --enable-opencl to the configure command-line to enable OpenCL
+    support.
 
 2021-01-16  7.0.10-58  <quetzlzacatenango@image...>
   * Release ImageMagick version 7.0.10-58 GIT revision 18277:8876652f5:20210116
